Mon Jan 26 15:35:24 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/DII_AMI_Forward/run_test.pl:
        * tests/DSI_AMH/run_test.pl:
        * tests/DSI_AMI_Gateway/run_exception_test.pl:
        * tests/DSI_AMI_Gateway/run_test.pl:
        * tests/DSI_Gateway/run_exception_test.pl:
        * tests/DSI_Gateway/run_test.pl:
          Made "fuzz" compliant.

Mon Jan 26 11:13:49 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * tests/Bug_3524_Regression/client.cpp:
        * tests/Bug_3524_Regression/test_i.cpp:

          Fixed this test on CodeGear builds.

Fri Jan 23 23:05:42 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * orbsvcs/orbsvcs/PortableGroup/PortableGroup_Request_Dispatcher.cpp:
        * orbsvcs/orbsvcs/PortableGroup/Portable_Group_Map.cpp:

          Updated code that calls orb_core->adapter_registry ()
          because the return type is now a reference and not a pointer.

Fri Jan 23 21:31:09 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * tao/CodecFactory/IOP_Codec_include.pidl:
        * tao/Compression/Compression_include.pidl:
        * tao/IORInterceptor/IORInfo.pidl:
        * tao/Monitor/Monitor_include.pidl:
        * tao/ObjRefTemplate/ObjectReferenceTemplate_include.pidl:
        * tao/PI/PI_include.pidl:
        * tao/PI_Server/PI_Server_include.pidl:
        * tao/PortableServer/PortableServer_include.pidl:
        * tao/RTCORBA/RTCORBA_include.pidl:
        * tao/RTPortableServer/RTPortableServer_include.pidl:
        * tao/RTScheduling/RTScheduler_include.pidl:

          Modification to yesterday's commit:
          Thu Jan 22 22:58:21 UTC 2009  Adam Mitz  <mitza@ociweb.com>
          Now using a different workaround as suggested by Johnny Willemsen.

Fri Jan 23 15:21:24 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/CORBALOC_Parser.cpp:
          Use prefix increment

        * tao/default_resource.cpp:
        * tao/ORB.cpp:
        * tao/ORB_Core.cpp:
        * tao/Transport.cpp: