@@ -1,3 +1,9 @@
+Mon Jan 26 15:42:05 UTC 2009  Marcel Smit  <msmit@remedy.nl>
+
+        * tests/POA/Forwarding/run_test.pl:
+        * tests/Portable_Interceptors/Processing_Mode_Policy/Remote/run_test.pl:
+          Optimized scripts for Win CE targets
+
 Mon Jan 26 15:35:24 UTC 2009  Marcel Smit  <msmit@remedy.nl>
 
         * tests/DII_AMI_Forward/run_test.pl:
